[gd_scene load_steps=4 format=2]

[ext_resource path="res://TryAgainFonte.tres" type="DynamicFont" id=1]
[ext_resource path="res://MeuTema.tres" type="Theme" id=2]
[ext_resource path="res://GameOver.gd" type="Script" id=3]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.305882, 0.113725, 0.113725, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 278.0
margin_top = 99.0
margin_right = 745.0
margin_bottom = 501.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 467.0
margin_bottom = 97.0
theme = ExtResource( 2 )
text = "Game Over"
align = 1

[node name="TryAgain" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 467.0
margin_bottom = 168.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Try Again"
flat = true

[node name="Panel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 172.0
margin_right = 467.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 100 )

[node name="Atirador1" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 467.0
margin_bottom = 337.0
custom_fonts/font = ExtResource( 1 )
text = "Jogador 1"

[node name="Atirador2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 341.0
margin_right = 467.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 1 )
text = "Jogador 1"

[connection signal="pressed" from="CenterContainer/VBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
